# gamite-tauri

./: README.md  index.html  package.json  pnpm-lock.yaml  prettier.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  App.vue  index.css  index.tsx  main.ts  models.ts  router.ts  router.tsx  routes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/addon-steam/: Cargo.toml
src-tauri/addon-steam/src/: lib.rs
src-tauri/addon-steam/src/kv/: ast.rs  lexer.rs  mod.rs  parser.rs
src-tauri/capabilities/: default.json
src-tauri/core/: Cargo.toml
src-tauri/core/src/: lib.rs  models.rs  plugin.rs
src-tauri/migrations/: 20241203193859_create_basic_table.sql
src-tauri/src/: db.rs  lib.rs  main.rs  plugin.rs
src-tauri/src/db/: game.rs  game_genres.rs  genre.rs  init.sql  mod.rs  ops.rs
src/common/: bigScreen.ts  colors.ts  gameActions.ts  gameActions.tsx  genres.ts  input.ts  mapUrl.ts  models.ts  settings.ts
src/components/: ContextMenu.svelte  ContextMenu.tsx  ContextMenu.vue  Genres.tsx  Genres.vue  NavMenu.css  NavMenu.tsx  NavMenu.vue  Titlebar.tsx  Titlebar.vue  Toolbar.tsx  UrlImage.tsx  UrlImage.vue
src/views/: LibraryView.tsx  LibraryView.vue  SettingsView.tsx  SettingsView.vue
